[ CHANGELOG
	Project Name
		The Forgotten Server

	Version
		0.2.14

	Codenamed
		"Mystic Spirit"

	License
		GNU GPLv2

	Forum
		http://otland.net/
]

[ File changes
	D = Deleted.
	M = Modified.
	A = Added.
]

[ Milestone
	Updated the MySQL schema, for an unknown reason it was missing the changes from database schema version 1.
	Fixed a bug with the optimized escape blob function for DatabaseSQLite, output should be identical to the old function but over 10 times faster.
	Fixed a possible bug with copied actions.
]