@@ -84,7 +84,7 @@ bool IOMap::loadMap(Map* map, const std::string& identifier)
 	int64_t start = OTSYS_TIME();
 
 	FileLoader f;
-	if(!f.openFile(identifier.c_str(), false, true))
+	if(!f.openFile(identifier.c_str(), "OTBM", false, true))
 	{
 		std::ostringstream ss;
 		ss << "Could not open the file " << identifier << ".";
